# esp32_stocks_ticker

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  sdkconfig  sdkconfig.defaults  sdkconfig.old
main/: CMakeLists.txt  connectivity_config.h  main.c  tickers.txt  view_config.h  wifi_eap_fast_main.c
